# meshanchor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEBUG_VALIDATION.md  DEPRECATED.md  DEVELOPMENT.md  Dockerfile  INSTALL_OPTIONS.md  QUICK_START.md  README.md  RELEASE.md  RESEARCH.md  SECURITY.md  SESSION_NOTES.md  STANDALONE_VERIFICATION.md  dev_setup.sh  install.sh  mypy.ini  org.meshanchor.app.desktop  org.meshforge.app.desktop  pyproject.toml  requirements.txt  rns_config_utils.py  setup.py  substack_claude_broke_its_own_rules.md  web_installer.py
.claude/: INDEX.md  TODO_PRIORITIES.md  auto_review_allowlist.yaml  code_review_health_check.md  dude_ai_substack_bio.md  dude_ai_university.md  health_report_2026-01-19.md  memory_timeline.md  pickup_traffic_inspector.md  session_notes.md  session_notes_moc_broker.md  settings.json
.claude/agents/: code-reviewer.md  debugger.md
.claude/archive/: 2026-02-04_reliability_assessment.md  dude_ai_substack_bio.md  memo_to_gemini.md  memory_timeline.md  meshforge_ecosystem_whitepaper.md  rns_gateway_code_review.md  rns_gateway_foundational_review.md
.claude/articles/: 2026-01-31_config_lesson.md  2026-02-11_the_tcp_problem_nobody_talks_about.md  2026-02-22_meshforge_whitepaper_ai_developers.md
.claude/audits/: TEMPLATE.md  code-review-quality-2026-02-26.md  code-review-quality-2026-02-28.md  rns_gateway_code_review.md  rns_gateway_foundational_review.md
.claude/commands/: ralph-loop.md  ralph-wiggum-healthcheck.md  ralph-wiggum.md  review.md  test.md  version.md
.claude/export/: MESHFORGE_INTEGRATION.md
.claude/foundations/: ai_principles.md  api_dependencies.md  branch_strategy.md  context_awareness.md  cross_repo_topology.md  missing_features.md  (+14 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  branch-protection.md
artifacts/: frequency-calculator.html  link-budget-calculator.html  maidenhead-calculator.html
assets/: org.meshanchor.policy
dashboards/: README.md  meshanchor-gateway.json  meshanchor-infinity.json  meshanchor-influxdb.json  meshanchor-nodes.json  meshanchor-overview.json  meshforge-gateway.json  meshforge-infinity.json  meshforge-influxdb.json  meshforge-nodes.json  meshforge-overview.json
docs/: METRICS.md  REST_API.md  USAGE.md  VISUAL_GUIDE.md  meshanchor.1
examples/: README.md
locale/: template.json
plugins/: README.md
requirements/: core.txt  dev.txt  maps.txt  monitoring.txt  mqtt.txt  rns.txt
scripts/: 010_meshanchor.sudoers  99-meshcore.rules  boundary_soak.py  boundary_soak_fleet.py  check-logs.sh  cleanup_old_install.sh  configure_lora.sh  db_audit.py  deploy_noc.sh  healthcheck.sh  install-desktop.sh  install-hooks.sh  install_arm64.sh  install_armhf.sh  install_meshchatx.sh  install_noc.sh  install_sudoers.sh  lint.py  meshanchor-daemon.service  meshanchor-launcher.sh  meshanchor-map.service  meshanchor-profile.sh  meshanchor-terminal.sh  meshanchor.service  meshcore-radio.service  meshforge-daemon.service  meshforge-launcher.sh  meshforge-map.service  meshforge-profile.sh  meshforge-terminal.sh  meshforge.service  mosquitto-localhost.conf  patch_rns_transport_race.py  pi_sanity_check.sh  pr-workflow.sh  reinstall.sh  rns_wedge_repro.py  selftest.py  setup-release-branches.sh  setup_permissions.sh  (+6 more)
src/: __version__.py  daemon.py  daemon_config.py  dashboard.py  launcher.py  launcher_vte.py  main.py  main_device.py  main_gtk.py  main_rns.py  main_tui.py  main_utils.py  main_web.py  monitor.py  setup_wizard.py  standalone.py  web_monitor.py
templates/: config.yaml  meshtoad.yaml  reticulum.conf  volcano_ai_reticulum.conf
tests/: __init__.py  conftest.py  handler_test_utils.py  test_active_health_probe.py  test_agent.py  test_ai_tools.py  test_all_handlers_protocol.py  test_analytics.py  test_antenna_patterns.py  test_api_proxy_sanitize.py  test_aredn.py  test_aredn_integration.py  test_auto_review.py  test_auto_traceroute.py  test_boundary_soak.py  test_boundary_soak_fleet.py  test_boundary_timing.py  test_bridge_health.py  test_bridge_integration.py  test_broker_profiles.py  test_canonical_message.py  test_channel_scan.py  test_chunker.py  test_circuit_breaker.py  test_classifier_integration.py  test_commands.py  test_common.py  test_compliance.py  test_config_api.py  test_config_api_chat.py  test_config_drift.py  test_connection_manager.py  test_contact_mapping.py  test_daemon.py  test_data_pipeline.py  test_db_audit.py  test_db_hardening.py  test_db_helpers.py  test_db_inventory.py  test_dependency_guard.py  (+152 more)
web/: los_visualization.html  node_map.html  sw-tiles.js
(+782 files in other folders)
